# minimal_trader

./: .gitignore  CHATGPT.MD  README.md  WORKFLOW.md  __init__.py  architecture.md  backtest.py  config.yaml  config_mt5_test.yaml.py  data_feed.py  engine.py  framework_validation.py  implementation-log.md  live_monitor.py  live_trading.py  main.py  performance_optimizer.py  pyproject.toml  repomix-output-bastiaandehaan-minimal_trader.md  requirements.txt  rsi_debugger.py  strategy.py  test_trader.py  testplan.md  trader.py
.CHATGPT/: settings.local.json
.claude/: settings.local.json
.github/workflows/: ci.yml
data/samples/: GER40.cash_M1.sample.csv
feeds/: csv_feed.py  mt5_feed.py
minimal_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run-tests.ps1
strategies/: __init__.py  abstract.py  breakout.py  dax_sr_breakout.py  rsi_reversion.py  simple_test.py  sma_cross.py
tests/: property_test.py  test_backtest.py  test_csv_freq_normalize.py  test_integration.py  test_mt5_feed.py  test_multi_strategy.py  test_rsi_strategy.py  test_strategy.py
utils/: engine_guards.py
